FIX - Border color for dark mode improved

--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -16,5 +16,5 @@
   --bgSecondary: #23013d;
   --accentPrimary: #ffffff;
   --accentSecondary: #fffffc;
-  --border: #000000;
+  --border: #444444;
 }
